feat(curriculum): add Java Fundamentals module and initial lesson structure
- Populate DefaultCurriculum with the Java Fundamentals module
- Add ordered lesson sequence for the first learning path
- Introduce 10 foundational Java lessons from Introduction to Encapsulation
- Initialize lessons with empty concept references for incremental development
- Keep curriculum independent from educational content and UI
- Preserve clean separation between learning structure and learning material